--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -369,3 +369,7 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+
+#demo-container .on { color: green; font-size: 25px; }
+#demo-container .off { color: red; font-size: 25px; display: none; }
